# video-dubbing-hatchet-serverless

./: .env.example  .gitignore  DEVELOPER_GUIDE.md  README.md  batch_trigger.py  docker-compose.yml  pyproject.toml  requirements.txt  trigger.py  worker.py
containers/translate/: Dockerfile  translate.py
containers/tts/: Dockerfile  synthesize.py
containers/whisper/: Dockerfile  transcribe.py
docker/: base-cpu.Dockerfile  base-cuda.Dockerfile  docker-compose.yml  extract.Dockerfile  remux.Dockerfile  transcribe.Dockerfile  translate.Dockerfile  tts.Dockerfile
pipeline/: config.py  local.py  nebius.py  workflow.py
scripts/: docker_build.sh  docker_test.sh  download_models.py  download_samples.py  probe_stage_remote.py  sync_models.py  uv_sync_task.sh
src/hatchet/: __init__.py  __main__.py  cli.py  console.py  download.py  trigger.py  worker.py  workflow.py
src/jobs/: extract.py  remux.py  transcribe.py  translate.py  tts.py
src/models/: __init__.py  __main__.py  bucket.py  console.py  download.py  download_cli.py  download_models.py  model_cache.py  preflight.py  whisper.py
src/pipeline/: __main__.py  batch.py  batch_runner.py  config.py  cost.py  metadata.py  nebius.py  paths.py  run.py  storage.py  utils.py
src/pipeline/runner/: __init__.py  base.py  local.py  nebius.py
src/pipeline/stages/: __init__.py  _helpers.py  extract.py  remux.py  transcribe.py  translate.py  tts.py
